# finalwhistle

./: .gitignore  README.md
.gitlab/issue_templates/: issue_template
frontend/: package-lock.json  package.json
frontend/src/: main.js
frontend/src/components/: NavbarTemplate.vue
frontend/src/pages/: App.vue  DashboardCustomizePage.vue  DashboardPage.vue  LoginPage.vue  RegisterPage.vue
frontend/src/routes/: index.js
frontend/src/scss/: app.scss
frontend/src/scss/components/: navbar.scss  neons.scss
frontend/src/scss/pages/: customizedashboard.scss  dashboard.scss  login.scss  register.scss
frontend/src/utils/: autocompletes.js  mutations.js  queries.js
gql-api/: .gitignore  README.md  package-lock.json  package.json  server.js
gql-api/models/: leagueModel.js  sportModel.js  subscriptionModel.js  teamModel.js  userModel.js
gql-api/resolvers/: index.js  leagueResolver.js  sportResolver.js  subscriptionResolver.js  teamResolver.js  userResolver.js
gql-api/schemas/: index.js  leagueSchema.js  sportSchema.js  subscriptionSchema.js  teamSchema.js  userSchema.js
gql-api/utils/: auth.js  db.js  pass.js
webscraping/: .gitignore  README.md  requirements.txt  setup.cfg
webscraping/src/flashscore-scrapper/: chrome_selenium.py  database_connection.py  factories.py  flashscore_chrome_selenium.py  flashscore_football.py  flashscore_team_lookups.py  flashscore_utils.py  help.py  main.py  resolvers.py
