[metadata]
name = sport-webscraper
description = Webscrapes livesport sites from data
author = Åukasz Rembowski
license = GPL-3.0
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages =
    sport-webscraper
install_requires = 
    requests>=2
python_requires = >=3.7
package_dir =
    =src
zip_safe = no