[metadata]
name = sport-webscraper
version = 0.1.0
description = Webscrapes sports sites from data
author = Åukasz Rembowski
license = GPL-3.0
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages =
    sport-webscraper
install_requires = 
    pymongo>=4.1
    selenium>=4.1
    webdriver-manager>=3.5
    python-dotenv>=0.20
    typing-extensions>=4.1
python_requires = >=3.7
package_dir =
    =src
zip_safe = no